--- a/dataproject/NBA_Tempo_and_Injuries.Rmd
+++ b/dataproject/NBA_Tempo_and_Injuries.Rmd
@@ -11,7 +11,7 @@ output:
 
 <center>
 
-![](nba_logo.png){width=40%}
+![](nba_logo.png?raw=true){width=40%}
 
 </center>
 
@@ -23,7 +23,7 @@ In the NBA, team organizations have suffered tremendously due to injuries. Some 
 
 <center>
 
-![](nba_hurt1.png){width=40%} ![](nba_hurt2.png){width=50%}
+![](nba_hurt1.png?raw=true){width=40%} ![](nba_hurt2.png?raw=true){width=50%}
 
 </center>
 
@@ -33,7 +33,7 @@ In the NBA, team organizations have suffered tremendously due to injuries. Some 
 
 <center>
 
-![](nba_commissioner.png){width=20%}
+![](nba_commissioner.png?raw=true){width=20%}
 
 </center>
 
@@ -318,7 +318,7 @@ Here we have a data visualization of the possessions by teams. Each of the color
 
 -----
 
-![](slide22.PNG)
+![](slide22.PNG?raw=true)
 
 This visualization created using Tableau, shows the playstyles ranked from seasons 2015 to 2020. We see that the playstyles: spot up, ball handler, transition, and cut are ranked highly and their ranks did not change much. We can see that the dynamic playstyles are becoming more popular than non-dynamic playstyles, such as post up, isolation, roll man, and putbacks.
 
@@ -870,11 +870,11 @@ From this correlation matrix, we can see a statistically significant linear rela
 
 -----
 
-![](slide43.PNG)
+![](slide43.PNG?raw=true)
 
 From this visualization that was created using Tableau, we can see that the higher the pace, the more likely the team wins the championship. We can see that from 2017 to 2020, all the teams with higher pace won the championship, except in 2016, where the team with lower pace won.
 
-![](slide44.PNG)
+![](slide44.PNG?raw=true)
 
 Similarly in this visualization, we can see that the fewer number of games missed due to injuries, the more likely the team wins the championship. We can see that from 2016 to 2019, all the teams with less games missed won the championship, except in 2020, where the team with more games missed won. That might be because Miami Heat's pace was less than Los Angeles Lakers.
 
@@ -950,7 +950,7 @@ Similarly in this visualization, we can see that the fewer number of games misse
 
 ----------
 
-# Sources
+# **Sources**
 
 - [NBA Advanced Stats](https://www.nba.com/stats/)
 - [spotrac | Cumulative Season Injured List By Player](https://www.spotrac.com/nba/injured-reserve/)
