--- a/clientproject/Code/client-data-project.Rmd
+++ b/clientproject/Code/client-data-project.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Client Data Project: Cybersecurity Company"
+title: "Cybersecurity Client: Exploration of Digital Marketing Techniques to Increase Engagement"
 author: "Cohort 194"
 output:
   github_document:
@@ -463,6 +463,7 @@ survey_df1 <- read.csv("ux-survey.csv")
 ```
 
 ```{r, echo = TRUE, include = FALSE, results = FALSE, warning = FALSE, message = FALSE}
+# Manipulate data-----
 survey_df1 <- survey_df1 %>%
   select(-Timestamp)
 
@@ -495,6 +496,7 @@ names(survey_df2)[names(survey_df2) == "Recommend"] <- "How likely are you to re
 ```
 
 ```{r, echo = FALSE, results = FALSE, warning = FALSE, message = FALSE, fig.width = 12}
+# Data visualization-----
 plot(likert(survey_df2),
             type = "heat",
             low.color = "white",
@@ -506,6 +508,7 @@ plot(likert(survey_df2),
 ```
 
 ```{r, echo = FALSE, results = FALSE, warning = FALSE, message = FALSE, fig.width = 12}
+# Data visualization-----
 plot(likert(survey_df2),
      type = "density",
      facet = TRUE,
